# CMake_Based_Project

./: CMakeLists.txt
include/: Print.h  WriteInFile.h
src/: main.cpp  print.cpp
